--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "drupal/admin_toolbar": "^3.0",
         "drupal/advagg": "^6.0",
         "drupal/better_exposed_filters": "^6.0",
-        "drupal/commerce": "^2.21",
+        "drupal/commerce": "^2.35",
         "drupal/commerce_paypal": "^1.0@RC",
         "drupal/commerce_pricelist": "^2.1",
         "drupal/commerce_shipping": "^2.x-dev",
@@ -41,7 +41,7 @@
         "drupal/gin_toolbar": "^1.0@beta",
         "drupal/google_analytics": "^4.0",
         "drupal/google_tag": "^1.5",
-        "drupal/hreflang": "^1.9",
+        "drupal/hreflang": "^1.11",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/jquery_ui_accordion": "^2.0",
         "drupal/layout_builder_modal": "^1.1",
@@ -50,12 +50,13 @@
         "drupal/metatag": "^1.22",
         "drupal/module_filter": "^4.0",
         "drupal/pathauto": "^1.11",
+        "drupal/physical": "^1.3",
         "drupal/price_difference_formatter": "^1.2",
         "drupal/rdf": "^2.1",
         "drupal/recently_read": "^1.3",
         "drupal/redirect": "^1.8",
         "drupal/robotstxt": "^1.4",
-        "drupal/search_api": "^1.26",
+        "drupal/search_api": "^1.29",
         "drupal/search_api_solr": "^4.2",
         "drupal/simple_sitemap": "^4.1",
         "drupal/state_machine": "^1.7",
